respond to kernel MoML support review